{
    "name": "test",
    "maps": [
        {
            "name": "testButton",
            "id": "0b65b20b-903d-46ab-80e0-ca10623fcaa1",
            "actions": [
                {
                    "name": "Button1",
                    "type": "Button",
                    "id": "b0f3604b-f15b-4cf2-ae4f-01a95bb5c5e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Button2",
                    "type": "Button",
                    "id": "3bd4dea3-0f66-4ee7-8879-aae989484aa9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Button3",
                    "type": "Button",
                    "id": "ffecd506-9b5b-43e1-ba8a-8e72387cf440",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Button4",
                    "type": "Button",
                    "id": "897163a2-6889-44d9-a83e-410105123996",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Button5",
                    "type": "Button",
                    "id": "d95f0695-75f7-451b-a046-7de12d3cc365",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Button6",
                    "type": "Button",
                    "id": "132b6b66-b9e9-4d02-997d-8a93a2d7e1c7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a483e444-c6a6-4c70-812c-1392922e59d3",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeMa",
                    "action": "Button1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73a113eb-c3da-41c9-b6d8-b95f5da14c3c",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeMa",
                    "action": "Button2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a968a80a-a180-4b54-8353-a3333b44a8a2",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeMa",
                    "action": "Button3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca3db5e1-8c29-438d-ba46-8006adda94ed",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Button4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "468fcdf3-7c4e-41b1-babe-9b880edaf59f",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Button5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ddff3ef8-cba2-4f0e-a939-eca4632914b6",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Button6",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeMa",
            "bindingGroup": "KeMa",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}